<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TeamA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:text="@string/team_a_text"
            android:textColor="#6C6868"
            android:textSize="20sp"

            app:layout_constraintEnd_toStartOf="@id/TeamB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TeamB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="70dp"
            android:text="@string/team_b_text"
            android:textColor="#6C6868"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/_0_text"
            android:textColor="#000"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/pt3A"
            app:layout_constraintEnd_toStartOf="@id/divider"
            app:layout_constraintStart_toStartOf="@id/TeamA"
            app:layout_constraintTop_toBottomOf="@id/TeamA" />

        <Button
            android:id="@+id/pt3A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#FF9800"
            android:text="@string/_3_points_textA"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@id/divider"
            app:layout_constraintStart_toStartOf="@id/TeamA"
            app:layout_constraintTop_toBottomOf="@id/TeamA" />

        <Button
            android:id="@+id/pt2A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FF9800"
            android:text="@string/_2_points_textA"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@id/pt3A"
            app:layout_constraintStart_toStartOf="@id/pt3A"
            app:layout_constraintTop_toBottomOf="@id/pt3A" />

        <Button
            android:id="@+id/pt1A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FF9800"
            android:text="@string/free_point_textA"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@id/pt2A"
            app:layout_constraintStart_toStartOf="@id/pt2A"
            app:layout_constraintTop_toBottomOf="@id/pt2A" />

        <TextView
            android:id="@+id/resultB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/_0_textB"
            android:textColor="#000"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/pt3B"
            app:layout_constraintEnd_toEndOf="@id/TeamB"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/TeamB" />


        <Button
            android:id="@+id/pt3B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#FF9800"
            android:text="@string/_3_points_textB"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@id/TeamB"
            app:layout_constraintStart_toEndOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/TeamB" />

        <Button
            android:id="@+id/pt2B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FF9800"
            android:text="@string/_2_points_textB"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@id/pt3B"
            app:layout_constraintStart_toStartOf="@id/pt3B"
            app:layout_constraintTop_toBottomOf="@id/pt3B" />

        <Button
            android:id="@+id/pt1B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FF9800"
            android:text="@string/free_point_textB"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@id/pt2B"
            app:layout_constraintStart_toStartOf="@id/pt2B"
            app:layout_constraintTop_toBottomOf="@id/pt2B" />


        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="300dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="#6C6868"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/resetAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="#FF9800"
            android:text="@string/reset_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/pt1B"
            app:layout_constraintStart_toStartOf="@id/pt1A"
            app:layout_constraintTop_toBottomOf="@id/divider" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>